if (DEFINED ENV{JAVA_HOME})
  MESSAGE( "JAVA HOME: $ENV{JAVA_HOME}" )
else()
  MESSAGE( "******** ERROR: JAVA_HOME not defined.  If running cmake with sudo consider using the -E flag" )
endif()

INCLUDE_DIRECTORIES("$ENV{JAVA_HOME}/include")

SET(HONEYCOMB_SOURCE_DIR "${CMAKE_SOURCE_DIR}/storage/honeycomb")
SET(HONEYCOMB_BINARY_DIR "${CMAKE_BINARY_DIR}/storage/honeycomb")
SET(HONEYCOMB_THIRD_PARTY "${HONEYCOMB_BINARY_DIR}/third-party")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${HONEYCOMB_SOURCE_DIR}/cmake/")

FIND_PACKAGE(LibXml2 REQUIRED)
if (LIBXML2_FOUND)
  INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
  LINK_LIBRARIES(${LIBXML2_LIBRARIES})
endif()

FIND_PACKAGE(LibAvro REQUIRED)
if (LIBAVRO_FOUND)
  INCLUDE_DIRECTORIES(${LIBAVRO_INCLUDE_DIR})
  LINK_LIBRARIES(${LIBAVRO_LIBRARIES})
endif()

if (APPLE)
  MESSAGE( "Compiling on Apple System" )
  LINK_DIRECTORIES("${CMAKE_BINARY_DIR}/dependencies/lib/")
  SET(LIBS "-lxml2 -framework JavaVM")
else()
  MESSAGE( "Compiling on Linux System" )
  INCLUDE_DIRECTORIES("$ENV{JAVA_HOME}/include/linux")
  SET(path "amd64")
  if(CMAKE_SIZEOF_VOID_P EQUAL 4) # Is this a 32 bit system?
      SET(path "i386")
  endif()
  LINK_DIRECTORIES("${CMAKE_BINARY_DIR}/dependencies/lib/")
  LINK_DIRECTORIES("/usr/local/avro/lang/c/build/avrolib/lib")
  LINK_DIRECTORIES("$ENV{JAVA_HOME}/jre/lib/${path}")
  LINK_DIRECTORIES("$ENV{JAVA_HOME}/jre/lib/${path}/server")
  LINK_DIRECTORIES("$ENV{JAVA_HOME}/jre/lib/${path}/xawt")
  SET(LIBS jawt jvm jsig xml2)
endif()

SET(HONEYCOMB_PLUGIN_DYNAMIC "ha_honeycomb")
SET(HONEYCOMB_SOURCES HoneycombHandler.cc Search.cc Crud.cc ha_honeycomb.cc Util.cc JNISetup.cc Logging.cc Java.cc OptionParser.cc FieldMetadata.cc JNICache.cc JavaFrame.cc Row.cc IndexSchema.cc)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-error -g -Wextra -Wno-unused-parameter -Wswitch-default -Wcast-qual -Weffc++ -Wwrite-strings -Winit-self -Winline -Wmissing-noreturn -Wredundant-decls -Wpointer-arith -Wstrict-overflow=5 -Wstrict-aliasing=2 -Wno-deprecated-declarations -Wno-unknown-pragmas -Wctor-dtor-privacy -Woverloaded-virtual")
MYSQL_ADD_PLUGIN(honeycomb ${HONEYCOMB_SOURCES} STORAGE_ENGINE MODULE_ONLY
  LINK_LIBRARIES  ${LIBS})
